# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.218 2005/04/14 14:59:48 rocket Exp $

  14 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot_target.py,
  modules/stage4_target.py, modules/tinderbox_target.py,
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh,
  targets/support/chroot-functions.sh:
  AUTORESUME PATCH; modified the chroot-functions.sh script so the chroot will
  die properly on CTRL-C; fixed stage1 bug with gcc-setup

  11 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Added support for livecd-stage2 to use a snapshot or livecd-stage1 image

  11 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/stage4_target.py,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage4/stage4-controller.sh, +targets/stage4/unmerge.sh,
  targets/support/functions.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, +targets/support/rc-update.sh:
  Generalized kernel support, fsscript, rcupdate, etc for stage4

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/pre-kmerge.sh:
  Removed sed for usb devices from legacy genkernel, as we're going to require
  a version much higher that no longer exhibits the bug.

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, -targets/support/gamecdfs-update.sh,
  targets/support/livecdfs-update.sh:
  Removed empty gamecdfs-update.sh, updated livecdfs-update.sh to work